# snow-ui

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: elements.rs  event_bus.rs  form.rs  girl.rs  handler.rs  layout.rs  lib.rs  object.rs  server_api.rs  state.rs  traits.rs  types.rs
crates/core/tests/: list_defaults.rs  macros_integration.rs  server_api.rs
crates/macros/: Cargo.toml
crates/macros/src/: derive_into_object.rs  derive_message.rs  element_macro.rs  lib.rs  list_macro.rs  obj_macro.rs  utils.rs
crates/macros/tests/: default_factory.rs  list_proc_macro.rs
examples/: click.rs  clock.rs  login.rs  lovely_girl.rs  timer.rs
research/: README.md
research/cosmic-text/: Cargo.toml  README.md
research/cosmic-text/examples/: minimal.rs
research/cosmic-text/src/: lib.rs
research/glyphon/: Cargo.toml  README.md
research/glyphon/examples/: minimal.rs
research/glyphon/src/: lib.rs
research/lyon/: Cargo.toml  README.md
research/lyon/examples/: minimal.rs
research/lyon/src/: lib.rs
research/masonry/: Cargo.toml  README.md
research/masonry/examples/: hello_masonry.rs
research/taffy/: Cargo.toml  README.md
research/taffy/examples/: minimal.rs
research/taffy/src/: lib.rs
research/tao/: Cargo.toml  README.md
research/tao/examples/: minimal.rs
research/tao/src/: lib.rs
research/vello/: Cargo.toml  README.md
research/vello/examples/: button.rs  button_zh.rs  close_on_open.rs  hundred_buttons.rs  minimal.rs  render.rs
research/vello/src/: lib.rs
research/wgpu/: Cargo.toml  README.md
research/wgpu/examples/: minimal.rs
research/wgpu/src/: lib.rs
research/winit/: Cargo.toml  README.md
research/winit/examples/: close_on_open.rs  minimal.rs
research/winit/src/: lib.rs
