[workspace]
members = ["crates/core", "crates/macros"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["clia <helloclia@gmail.com>"]
edition = "2024"
rust-version = "1.89"
description = """
Snow UI is a pure rust UI framework.
"""
homepage = "https://snow-ui.dev"
repository = "https://github.com/snow-ui-rs/snow-ui"
documentation = "https://docs.rs/snow-ui/"
readme = "./README.md"
keywords = ["ui", "gui", "framework", "client", "app"]
license = "Apache-2.0"
categories = [
    "gui",
]

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["time", "rt", "sync"] }
futures = "0.3"
inventory = "0.3"
snow-ui-macros = { path = "crates/macros", version = "0.0.0" }
