[package]
name = "snow-ui"
version = { workspace = true }
authors = [
    "clia <helloclia@gmail.com>",
]
edition = { workspace = true }
rust-version = { workspace = true }
description = "salvo proc macros"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
snow-ui-macros = "0"

[[example]]
name = "clock"
path = "../../examples/clock.rs"

[[example]]
name = "lovely_girl"
path = "../../examples/lovely_girl.rs"
