[package]
name = "snow-ui"
version = { workspace = true }
authors = [
    "clia <helloclia@gmail.com>",
]
edition = { workspace = true }
rust-version = { workspace = true }
description = "salvo proc macros"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
snow-ui-macros = { workspace = true }
tokio = { workspace = true, features = ["time", "rt"] }
futures = { workspace = true }

[[example]]
name = "lovely_girl"
path = "../../examples/lovely_girl.rs"

[[example]]
name = "clock"
path = "../../examples/clock.rs"

[[example]]
name = "timer"
path = "../../examples/timer.rs"

[[example]]
name = "click"
path = "../../examples/click.rs"
