[package]
name = "snow-ui-macros"
version = { workspace = true }
authors = [
    "clia <helloclia@gmail.com>",
]
edition = { workspace = true }
rust-version = { workspace = true }
description = "Snow UI proc macros"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
